code/tui/snapshots/fullscreen/header/workspace_header_plain_marker.snap
---
source: code/tui/src/app/fullscreen/header_tests.rs
expression: text
---
  git main /work/ash                                       [— / —] [Dashboard]  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ────────────────────────────────────────────────────────────────────────────  
  >                                                                             
  ─────────────────────────────────────────────────────────── Automatic model   
                                                                                
  ⏸ Manual · ← Dashboard
